<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dard_board_bg">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shadow_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Trang chủ"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl1">


    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startBtn"
        android:layout_below="@+id/rcvList"
        android:layout_margin="10dp"
        android:background="@drawable/shadow_bg">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Nội dung công việc hôm nay"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp" />

        <TextView
            android:textColor="#313131"
            android:id="@+id/tvDes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/des_dashboard1" />

        <TextView
            android:textColor="#313131"
            android:id="@+id/tvDes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDes1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/des_dashboard2" />

        <TextView
            android:textColor="#313131"
            android:id="@+id/tvDes3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDes2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/des_dashboard3" />

    </RelativeLayout>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button_conner"
        android:text="đến trang điều khiển"
        android:textColor="@color/colorTextWhite" />
</RelativeLayout>